--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.4.5
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.6.0
@@ -50,7 +51,11 @@ dependencies:
   go_router: ^7.0.0
   google_fonts: ^4.0.4
   google_sign_in: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
   intl: any
+  path_provider: ^2.0.15
   persistent_bottom_nav_bar: ^5.0.2
   pin_code_fields: ^7.4.0
   shared_preferences: ^2.1.1
