--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   shared_preferences: ^2.1.1
   timeago: ^3.4.0
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
