--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.6.0
   comment_box: ^0.0.18
-  connectivity_plus: ^4.0.0
+  connectivity_plus: ^4.0.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.1.1
@@ -56,6 +56,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
+  internet_connection_checker: ^1.0.0+1
+  internet_connectivity_checker: ^1.0.1
   intl: any
   path_provider: ^2.0.15
   persistent_bottom_nav_bar: ^5.0.2
